testsuite/poke.pkl/int-type-diag-3.pk
/* { dg-do compile } */

var a = 2 as
          int<
          512B /* { dg-error "signed overflow.*\n.*" } */
          >;
